--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Ping Hu's Homepage
+page-top-title: Ping Hu
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+home-subtitle: Ping Hu&ensp;|&ensp;胡萍
+copyright-text: '&copy; Ping Hu 2023-2025. All Rights Reserved.'
